--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    min-height: 100vh;
+    min-height: 98vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,7 +14,7 @@ body {
 .calculator-container {
     display: flex;
     flex-direction: column;
-    width: 320px;
+    width: 254px;
     /* border: 3px solid white; */
     gap: 10px;
 }
@@ -26,21 +26,7 @@ body {
 
 .options-container {
     display: flex;
-    gap: 10px;
-}
-
-.digits-container {
-    display: flex;
-    flex-direction: column;
-    height: 254px;
-    gap: 10px;
-}
-
-.operators-container {
-    display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
-    height: 254px;
     gap: 10px;
 }
 
@@ -82,4 +68,18 @@ button.operator:active {
 
 #clear {
     font-size: 24px;
+}
+
+.witty-remark-container {
+    display: flex;
+    text-align: center;
+    flex-wrap: wrap;
+}
+
+.footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px 0;
+    margin: auto 0 0 0;
 }
